--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mysql://rahfimuhammad:rm22021997@localhost:3306/db_seblak
+DATABASE_URL=mysql://u795319649_seblak:Ivan_112233@arc-today.com/u795319649_db_seblak
